--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron dist/main.js",
     "build": "gulp",
     "watch": "gulp watch",
     "postinstall": "gulp"
